# smallgenomeutilities

./: .gitattributes  README  README.md  README.rst  __mapper_impl__.py  convert_qr.py  convert_reference.py  extract_sam.py  mapper.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: main.yaml  publish-to-pypi.yml
SmallGenomeUtilities/: __mapper_impl__.py
scripts/: aln2basecnt  compute_mds  convert_qr  convert_reference  coverage  coverage_depth_qc  coverage_stats  extract_consensus  extract_coverage_intervals  extract_sam  extract_seq  frameshift_deletions_checks  gather_coverage  mapper  min_coverage  minority_freq  minority_freq.py  pair_sequences  paired_end_read_merger  predict_num_reads  prepare_primers  remove_gaps_msa
scripts/testdata/: README.md  stopgain.cram  stopgain.cram.crai  stopgain_with_deletions.cram  stopgain_with_deletions.tsv  stopgain_with_insertions.cram.crai  stopgain_with_insertions.tsv  stoploss.cram  stoploss_with_deletions.cram  stoploss_with_deletions.cram.crai  stoploss_with_deletions.tsv  stoploss_with_insertions.tsv
smallgenomeutilities/: __checkPath__.py  __pileup__.py  _version.py
testdata/: stopgain.fasta  stopgain_with_deletions.fasta  stoploss.tsv  stoploss_with_deletions.fasta
tests/: conda_lint_env.yaml  conda_testsgmu_env.yaml  test_aln2basecnt.py  test_coverage_depth_qc.py  test_frameshift_deletions_checks.py  test_paired_end_read_merger.py  test_prepare_primers.py
tests/mini_sam/: mini.sam  mini_merged.sam
tests/test_aln2basecnt/: mini.basecnt.tsv  mini.coverage.tsv  mini.stats.yaml  mini_merged.basecnt.tsv  mini_merged.coverage.tsv  mini_merged.stats.ini  stopgain_with_deletions.basecnt.tsv  stopgain_with_deletions.coverage.tsv  stopgain_with_deletions.stats.yaml  stoploss.basecnt.tsv  stoploss.coverage.tsv  stoploss.stats.yaml  stoploss_with_deletions.basecnt.tsv  stoploss_with_deletions.coverage.tsv  stoploss_with_deletions.stats.yaml  stoploss_with_insertions.basecnt.tsv  stoploss_with_insertions.coverage.tsv  stoploss_with_insertions.stats.yaml
tests/test_coverage_depth_qc/: chrom.size  coverage.tsv  qc_abs.json  qc_irma.json  qc_rel.json  qc_samtools.json
tests/test_frameshift_deletions_checks/: stopgain.tsv  stopgain_nogap.chain  stopgain_nogap.fasta  stopgain_with_deletions.cram.crai  stopgain_with_deletions_nogap.chain  stopgain_with_deletions_nogap.fasta  stopgain_with_insertions.chain  stopgain_with_insertions.cram  stopgain_with_insertions.fasta  stopgain_with_insertions_nogap.chain  stopgain_with_insertions_nogap.fasta  stoploss.cram.crai  stoploss.fasta  stoploss_nogap.chain  stoploss_nogap.fasta  (+8 more)
(+8 files in other folders)
